sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:6: error: not found: value k
      if (plusPetit(k+1,k)) {echange(k+1,k);switch=true}
                    ^AlgBubbleSort3:6: error: not found: value k
      if (plusPetit(k+1,k)) {echange(k+1,k);switch=true}
                        ^AlgBubbleSort3:6: error: not found: value k
      if (plusPetit(k+1,k)) {echange(k+1,k);switch=true}
                                     ^AlgBubbleSort3:6: error: not found: value k
      if (plusPetit(k+1,k)) {echange(k+1,k);switch=true}
                                         ^