sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
  var switch:Boolean=true
  for(i<-0 to getNombreValeurs()-1){
		for(j<- i to getNombreValeurs()){
      if (plusPetit(k+1,k)) {echange(k+1,k);switch=true}
			if (!switch){return}
        }

    
  }  
  
  
 }
